# ml-problems

./: .gitignore  Makefile  environment.yml  examples_main.py  mnist_main.py  mnist_train.py  pyproject.toml
models/mnist/decision_tree_entropy/: evaluation.json
models/mnist/decision_tree_gini/: evaluation.json
notebooks/: 2_overfitting.ipynb  3_mnist_create_csv.ipynb  approach.ipynb
notebooks/1_sup_vs_unsup_learning/: tsne_on_mnist.ipynb
notebooks/2_cross_validation/: overfitting.ipynb
schema/: evaluation.py  fold.py
src/: evaluation.py  folds.py
utils/: classification_evaluations.py  constants.py  regression_evaluations.py
