[tool.poetry]
name = "ml-problems"
version = "0.1.0"
description = "Popular ML problems"
authors = ["Abiodun Adebowale (sirheed@gmail.com)"]

[tool.poetry.dependencies]
python = "~3.7"
python-dotenv = "^0.19.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
